--- a/Models/-VC/2025.06.12_RT-VC.md
+++ b/Models/-VC/2025.06.12_RT-VC.md
@@ -67,3 +67,13 @@ Our experimental results show that RT-VC achieves intelligibility and speaker si
 
 In addition, RT-VC achieves an end-to-end CPU latency of 61.4ms, which is 13.3\% faster than StreamVC.
 
+## 2·Related Work
+
+\begin{figure*}[t]
+\centering
+\includegraphics[width=\linewidth]{overview_cropped.pdf}
+\caption{Training and conversion pipeline of RT-VC. $s$ denotes input speech, $\hat{s}$ denotes reconstructed speech, $r(\cdot)$ denotes the pitch rescaling operation in ([rescaling](#rescaling)).}
+\label{system}
+\end{figure*}
+
+#
