--- a/Models/-VC/2025.06.12_RT-VC.md
+++ b/Models/-VC/2025.06.12_RT-VC.md
@@ -124,3 +124,12 @@ A recent study [^Liu2024Fast,] utilizes differentiable digital signal processing
 
 In our work, we adopt the DDSP vocoder from [^Liu2024Fast,] to enable real-time voice conversion.
 
+## 3·Method
+
+In this section, we first present an overview of the complete system during both training and inference (Section [overview](#overview)).
+
+Next, we describe the architecture and training strategies for each module of the system (Sections [source_extractor](#source_extractor) through [vocoder](#vocoder)).
+
+Finally, we outline the streaming strategy for real-time voice conversion (Section [streaming](#streaming)).
+
+#
