--- a/Models/-VC/2025.06.12_RT-VC.md
+++ b/Models/-VC/2025.06.12_RT-VC.md
@@ -193,4 +193,22 @@ To enhance the noise robustness of our source extractor, we add noise augmentati
 
 Specifically, we utilize the \texttt{AddColorNoise} module to introduce noise with varied spectral characteristics and the \texttt{RoomSimulator} module to apply different room impulse responses.
 
+### EMA Inverter
+
+We train a real-time EMA inverter based on the SoundStream encoder architecture [^Zeghidour2021Soundstream].
+
+It takes MFCC as input, and processes the input features through 11 dilated causal convolution layers followed by an MLP to get the predicted EMA output. 
+
+We also add augmentation during EMA inverter training.
+
+Prior to applying noise augmentation, we adopt the information perturbation technique proposed in [^Choi2021Neural], which sequentially applies a random parametric equalizer, pitch randomization, and formant shifting.
+
+Since these operations preserve content-level information, they encourage the EMA inverter to focus primarily on content features, thereby promoting improved disentanglement from speaker-specific characteristics. 
+
+To get the EMA ground truth, we generate pseudo EMA labels using the acoustic-to-articulatory inversion model from [^Cho2024Coding], [^Cho2024Self-Supervised], [^Cho2023Evidence].
+
+We linearly interpolate these pseudo EMA from 50Hz to 200Hz.
+
+The EMA inverter is trained to minimize the L1 loss between the predicted EMA and the pseudo EMA labels.
+
 #
