--- a/Models/-VC/2025.06.12_RT-VC.md
+++ b/Models/-VC/2025.06.12_RT-VC.md
@@ -246,4 +246,29 @@ The post convolution layer is also made causal.
 
 We train the model using the loss functions described in [^Liu2024Fast,], namely, the multi-scale spectral loss and the multi-resolution adversarial loss.
 
-#
+### Real-Time Inference
+
+\label{streaming}
+
+For real-time inference, the input spectral features (mel spectrogram and MFCC) are calculated on the fly.
+
+The window size is chosen to be 1024 at 16kHz for all spectral features, with reflection padding to center each output frame.
+
+This translates into a lookahead of half the window size, i.e. 32ms.
+
+Since our system is causal, we only need to maintain a ring buffer to store the running past context for each module during streaming, where the length of the context is determined by the receptive field of the causal convolution network.
+
+Additionally, to facilitate pitch rescaling to the target speaker's range, a running median of the source pitch is also maintained.
+
+The end-to-end latency $L$ is calculated as:
+
+$$
+
+L = t_{lookahead}+t_{chunksize}+t_{processing}
+
+$$
+
+Here $t_{lookahead}$ = 32ms (half the window size), $t_{chunksize}$ = 15ms (the input chunk size), and $t_{processing}$ = 14.4ms is the average processing time for each chunk on an Apple M3 CPU.
+
+Therefore, the end-to-end latency is 61.4ms, which is faster than the current SOTA (StreamVC, 70.8ms) by 13.3\%.
+
