--- a/Models/-VC/2025.06.12_RT-VC.md
+++ b/Models/-VC/2025.06.12_RT-VC.md
@@ -272,3 +272,77 @@ Here $t_{lookahead}$ = 32ms (half the window size), $t_{chunksize}$ = 15ms (the 
 
 Therefore, the end-to-end latency is 61.4ms, which is faster than the current SOTA (StreamVC, 70.8ms) by 13.3\%.
 
+## 4·System Design
+
+\begin{figure}[t]
+\centering
+\includegraphics[width=\linewidth]{web_demo.png}
+\caption{Screenshot of the RT-VC web demo interface.}
+\label{web_demo}
+\end{figure}
+
+A screen shot of the RT-VC web demo is shown in Figure [web_demo](#web_demo).
+
+This demo enables real-time voice conversion directly through the web interface, eliminating the need for any downloads.
+
+During conversion, the user speaks into the frontend, where the incoming audio is sampled at 16 kHz and segmented into 15ms chunks.
+
+These chunks are then transmitted to the backend for real-time inference (see Section [streaming](#streaming)), and the converted audio is returned to the frontend for playback through the designated output device.
+
+For audio input and output, they are configured to use the system's default devices.
+
+We recommend using a high-quality microphone with echo cancellation to minimize input noise and reduce speaker feedback.
+
+If necessary, users may modify their audio device settings via the system configuration and refresh the webpage to apply the changes. 
+
+For target speaker selection, users may choose from 10 pre-enrolled target speakers drawn from the VCTK dataset [^Yamagishi2019CSTR], with all target speakers being unseen during training.
+
+Moreover, the system allows users to dynamically switch the target speaker while speaking, with the generated voice updating instantly.
+
+The web demo is deployed on an AWS CPU server (C7i instance type) equipped with an Intel Xeon Scalable processor.
+
+Due to CPU resource constraints, only one user can access the web demo at a time for at most 5 minutes.
+
+Additional users are queued and notified when their session begins.
+
+\begin{table*}[t] 
+\centering
+\label{tab:metrics}
+\renewcommand{\arraystretch}{1.3} 
+\resizebox{\textwidth}{!}{ 
+
+\begin{tabular}{l cc cc cc c c}
+\toprule
+\multirow{2}{*}{\raggedright**Model Name**} 
+& \multicolumn{2}{c}{**Naturalness**} 
+& \multicolumn{2}{c}{**Intelligibility**} 
+& \multicolumn{2}{c}{**Speaker Similarity**} 
+& **$f_0$ Consistency**
+& **CPU** \\
+\cmidrule(lr){2-3} 
+\cmidrule(lr){4-5} 
+\cmidrule(lr){6-7} 
+\cmidrule(lr){8-8}
+
+& **{UTMOS** $\uparrow$}& **{MOS** $\uparrow$}
+& **{WER** $\downarrow$} & **{CER** $\downarrow$}
+& **{Resemblyzer Score** $\uparrow$} & **{SMOS** $\uparrow$}
+& **{$f_0$ PCC** $\uparrow$} 
+& **{Latency** $\downarrow$}\\
+
+\midrule
+**Source (LibriTTS)** & 4.03 $\pm$ 0.04 & 4.13 $\pm$ 0.16 & 5.06\% & 1.36\% & - & - & - & - \\
+\midrule
+**StreamVC**  & - & - & **6.22\%** & 2.17\% & **77.81\%** & - & 0.842 & 70.8ms \\
+**RT-VC** & 3.81 $\pm$ 0.02 & 3.87 $\pm$ 0.17 & 6.69\% & **2.12\%** & 76.65\% & 3.59 $\pm$ 0.19 & **0.865** & **61.4ms** \\
+\bottomrule
+\end{tabular}
+
+}
+\caption{Performance comparison of StreamVC and RT-VC.
+
+StreamVC values are taken directly from its publication.
+
+Values are presented with their corresponding 95\% confidence intervals where applicable.}
+\end{table*}
+
