--- a/Models/-VC/2025.06.12_RT-VC.md
+++ b/Models/-VC/2025.06.12_RT-VC.md
@@ -382,4 +382,18 @@ Speaker similarity is measured automatically by the cosine similarity between sp
 
 Lastly, $f_0$ consistency is evaluated using the Pearson correlation coefficient (PCC) between source and converted speech $f_0$ contours. 
 
+### Conversion Quality
+
+Table 1 summarizes the performance of RT-VC and StreamVC.
+
+Overall, the two models exhibit comparable conversion quality.
+
+For naturalness, RT-VC achieves a UTMOS of $3.81$ and a MOS of $3.87$, both of which are greater than 3.8, which is a good indicator of high fidelity.
+
+For intelligibility, RT-VC performs similarly to StreamVC, with a slightly higher WER (+0.47\%) and a marginally lower CER (–0.05\%), and both metrics are close to those of the ground truth.
+
+This indicates that the converted speech of RT-VC is highly intelligible.
+
+Additionally, both systems demonstrate comparable speaker similarity and $f_0$ consistency, with RT-VC showing a slightly lower Resemblyzer score (–1.16\%) and a marginally higher $f_0$ consistency (+0.023), underscoring its strong zero-shot conversion capability.
+
 #
