--- a/Models/-VC/2025.06.12_RT-VC.md
+++ b/Models/-VC/2025.06.12_RT-VC.md
@@ -419,3 +419,13 @@ These findings indicate that RT-VC effectively handles static noise when the inp
 \label{noise_robustness}
 \end{figure}
 
+## 6·Conclusion
+
+We introduce RT-VC, a zero-shot real-time voice conversion system that delivers low CPU latency and high conversion quality.
+
+RT-VC leverages the Speech Articulatory Coding (SPARC) framework in conjunction with a real-time DDSP vocoder, enabling natural speaker-content disentanglement with rapid conversion.
+
+Compared with the current SOTA, RT-VC achieves lower CPU latency while maintaining comparable conversion quality, and it demonstrates robustness against static background noise.
+
+Future work will explore prompt-free real-time voice conversion by incorporating offline design of target speaker characteristics, such as gender, age, emotion, and accent.
+
