--- a/Models/-VC/2025.06.12_RT-VC.md
+++ b/Models/-VC/2025.06.12_RT-VC.md
@@ -455,3 +455,11 @@ In particular, developing robust detection mechanisms is a priority, as these ca
 
 Furthermore, we intend to explore the integration of watermarking or traceable metadata into the converted audio, facilitating tracking and accountability in instances of unethical use.
 
+## 9·Acknowledgement
+
+This work is funded in part by the IARPA ARTS program.
+
+\bibliography{ref}
+
+\end{document}
+
