--- a/Models/-VC/2023.12.14_SEF-VC.md
+++ b/Models/-VC/2023.12.14_SEF-VC.md
@@ -438,3 +438,44 @@ which is designed to learn and incorporate speaker timbre from reference speech 
 The concise design of SEF-VC enhances its training stability and voice conversion performance.
 Objective and subjective evaluations demonstrate the superiority of SEF-VC to generate high-quality speech with better similarity to target reference than strong zero-shot VC baselines, even for very short reference speeches.
 
+## 1·References
+
+}
+
+\def\x{{\mathbf x}}
+\def\L{{\cal L}}
+
+\title{SEF-VC: Speaker Embedding Free Zero-Shot Voice Conversion with Cross Attention}
+
+\name{Junjie Li, Yiwei Guo, Xie Chen, $^{\dagger}$Kai Yu
+
+\thanks{$^{\dagger}$Kai Yu is the corresponding author.}}
+\address{X-LANCE Lab, Department of Computer Science and Engineering\\MoE Key Lab of Artificial Intelligence, AI Institute\\Shanghai Jiao Tong University, Shanghai, China\\
+\small{\texttt{
+\{junjieli, yiwei.guo, chenxie95, kai.yu\}@sjtu.edu.cn
+}}
+}
+
+\begin{document}
+
+\maketitle
+
+\begin{abstract}
+
+Zero-shot voice conversion (VC) aims to transfer the source speaker timbre to arbitrary {\em unseen} target speaker timbre, while keeping the linguistic content unchanged.
+
+Although the voice of generated speech can be controlled by providing the speaker embedding of the target speaker, the speaker similarity still lags behind the ground truth recordings.
+
+In this paper, we propose SEF-VC, a speaker embedding free voice conversion model, 
+which is designed to learn and incorporate speaker timbre from reference speech via a powerful position-agnostic cross-attention mechanism, and then reconstruct waveform from HuBERT semantic tokens in a non-autoregressive manner.
+
+The concise design of SEF-VC enhances its training stability and voice conversion performance.
+
+Objective and subjective evaluations demonstrate the superiority of SEF-VC to generate high-quality speech with better similarity to target reference than strong zero-shot VC baselines, even for very short reference speeches.
+
+\begin{keywords}
+
+Zero-shot voice conversion, cross-attention, speaker embedding free.
+
+\end{keywords}
+
