--- a/Models/-VC/2023.12.14_SEF-VC.md
+++ b/Models/-VC/2023.12.14_SEF-VC.md
@@ -479,3 +479,59 @@ Zero-shot voice conversion, cross-attention, speaker embedding free.
 
 \end{keywords}
 
+## 2·Introduction
+
+\label{sec:intro}
+
+Zero-shot voice conversion (VC) is tasked to convert the given speech from the source speaker to a previously unseen target speaker while preserving the speech content.
+
+This mainly involves two difficulties: disentanglement of speaker and content information, and speaker representation modeling. 
+Disentanglement aims to remove speaker information from source speech, while speaker representation modeling seeks a better way to represent and incorporate speaker identities.
+
+There are consistent and active research efforts in the disentanglement of speaker information.
+
+VC methods based on auto-encoders are first developed, which learn meaningful latent representations by designing information bottlenecks in the speech reconstruction process[^Hsu2016Voice], [^Qian2019Autovc], [^Qian2020Unsupervised], [^Chan2022Speechsplit2.], [^Wang2022Drvc].
+
+These bottleneck features can disentangle speaker information to some extent, but usually with sacrificed speech quality[^Wang2021Noisevc].
+
+Normalizing flows[^Kingma2018Glow] then provide a more elegant way for speaker adaptation and VC[^Casanova2021SC-GlowTTS], [^Du2023Speaker], such as YourTTS[^Casanova2022Yourtts].
+
+A more popular technique for speaker disentanglement recently is the adoption of self-supervised semantic features, such as
+
+vq-wav2vec[^Baevski2020Vq-Wav2vec] and HuBERT[^Hsu2021Hubert].
+
+Features extracted by these models are proved to well preserve the linguistic content while being scarcely speaker-variant [^Polyak2021Speech], [^Du2023Speaker]. 
+Previous studies introduce self-supervised semantic features into VC, but still in the traditional auto-encoder framework [^Lin2021{S2vc:}], [^Dang2022Training], or not in an any-to-any fashion[^Huang2021Any-to-One].
+
+[^Polyak2021Speech] proposes to train a vocoder that synthesizes waveforms from semantic tokens, which also brings an easier VC framework.
+
+However, the representation modeling of speaker identity in the process of copying the target voice still needs to be investigated.
+
+Most VC methods rely on a global speaker embedding, especially from speaker verification networks[^Snyder2018X-Vectors].
+[^Qian2019Autovc], [^Saito2018Non-Parallel] employ a pretrained speaker encoder.
+[^Lian2022{Towards], [^Lian2022Robust] sample speaker embeddings from a posterior distribution. [^Xiao2022DGC-Vector], [^Tan2021Zero-Shot] introduce a speaker representation method to better represent the characteristics of target speakers.
+
+The VC performance of these methods is thus limited by the representation ability of speaker embeddings, and they are also not robust to short references.
+
+Recent speech language models[^Borsos2023Audiolm], [^Wang2023Lm-Vc], [^Huang2023Make-a-Voice] avoid this issue by the promising in-context learning strategy that predicts the target voice given speech prompts.
+
+But they also suffer from stability issues due to their autoregressive nature.
+
+Different from previous works, we propose SEF-VC, a speaker embedding free zero-shot VC model.
+
+We propose to use the position-agnostic cross-attention mechanism[^Du2023UniCATS] as the speaker modeling approach.
+
+This replaces the conventional speaker embedding approach with a novel, effective, and robust **cross-attention** mechanism[^Du2023UniCATS].
+
+Then, SEF-VC is designed to learn and incorporate speaker timbre from reference speech via this type of cross-attention, and then reconstruct waveform from HuBERT semantic tokens in a non-autoregressive manner. 
+
+With the position-agnostic cross-attention mechanism, the speaker information is better modeled and incorporated into the semantic backbone.
+
+Objective and subjective evaluations demonstrate that SEF-VC outperforms several strong VC baselines.
+
+Ablation studies further show the advantage of using cross-attention instead of speaker embeddings, and the competence of SEF-VC over different prompt lengths.
+
+Audio samples are available at \url{https:///junjiell.github.io/SEF-VC/}.
+
+\vspace{-0.5cm}
+
