--- a/Models/-VC/2023.12.14_SEF-VC.md
+++ b/Models/-VC/2023.12.14_SEF-VC.md
@@ -535,3 +535,16 @@ Audio samples are available at \url{https:///junjiell.github.io/SEF-VC/}.
 
 \vspace{-0.5cm}
 
+## 3·Sef-Vc
+
+\label{sec:method}
+
+\label{sec:model architecture}
+
+![](vc_model.png)
+
+<a id="fig:model">The model architecture of SEF-VC.</a>
+
+\vspace{-0.5cm}
+
+#
