--- a/Models/-VC/2023.12.14_SEF-VC.md
+++ b/Models/-VC/2023.12.14_SEF-VC.md
@@ -547,4 +547,19 @@ Audio samples are available at \url{https:///junjiell.github.io/SEF-VC/}.
 
 \vspace{-0.5cm}
 
+### Non-Autoregressive Semantic Backbone
+
+The architecture of the model is illustrated in Fig.~[fig:model](#fig:model). 
+The backbone model of SEF-VC is a standard vocoder on discrete self-supervised speech representations, like vec2wav[^Du2023UniCATS] and SSR-VC[^Polyak2021Speech].
+
+We first obtain semantic tokens by conducting K-Means quantization on the continuous features extracted by a pretrained HuBERT model.
+
+Then, the frame-level semantic tokens are passed through two semantic encoders, and then upsampled into waveforms in a HifiGAN generator. 
+Following [^Du2023UniCATS], an auxiliary feature adaptor is placed between two semantic encoders, which helps to model the speech prosody features by predicting the pitch, probability of voice, and energy (PPE).
+
+To enhance the synthesis quality, we also adopt adversarial training following the practices in vocoders[^Kong2020Hifi-Gan], [^Du2023UniCATS].
+
+The discriminator here comprises a multi-period discriminator (MPD) and a multi-scale discriminator (MSD) proposed in HifiGAN[^Kong2020Hifi-Gan], which tries to distinguish reconstructed waveforms against ground truth ones.
+\vspace{-0.4cm}
+
 #
