--- a/Models/-VC/2023.12.14_SEF-VC.md
+++ b/Models/-VC/2023.12.14_SEF-VC.md
@@ -596,4 +596,34 @@ SEF-VC does not suffer from inference stability and speed issues because of the 
 
 \vspace{-0.4cm}
 
-#
+### Training and Inference
+
+\label{sybsec:train}
+
+As indicated by Fig.~[fig:model](#fig:model), we use non-parallel data to train our model. 
+Then, a single utterance is divided into two segments. 
+The first segment is used to extract the mel-spectrogram providing speaker information, which is cropped from a random starting point with length varying between 2 to 3 seconds randomly. 
+The rest of the utterance after the first segment serves as the second, which is fed to the pretrained HuBERT model to extract semantic tokens.
+
+This strategy ensures that the two segments always belong to the same speaker, without the need for oracle speaker labels.
+
+For the auxiliary feature adaptor, during training, we use the output of the first semantic encoder to predict PPE.
+
+The ground truth PPE is then added to the output of the first semantic encoder assisting the rest modules for reconstructing waveforms.
+
+The generator loss $\mathcal{L}_G$ is formulated as a weighted sum:
+
+\begin{multline}
+\mathcal{L}_G = \lambda_{\mathrm{rec}}\mathcal{L}_{\mathrm{rec}} + \lambda_{\mathrm{feat}}\mathcal{L}_{\mathrm{feat}} + \\
+\lambda_{\mathrm{mel}}\mathcal{L}_{\mathrm{mel}} + \lambda_{\mathrm{aux}}\mathcal{L}_{\mathrm{aux}} + \lambda_{\mathrm{adv}}\mathcal{L}_{\mathrm{adv}}
+\end{multline}
+
+where $\mathcal{L}_\mathrm{rec}$ is the reconstruction loss measured by $L_1$ distance between mel-spetrograms of real and synthetic waveforms. $\mathcal{L}_{\mathrm{feat}}$ is $L_1$ feature matching loss of intermediate output of the discriminator. $\mathcal{L}_{\mathrm{mel}}$ is measured between the output of the second semantic encoder and the target mel-spectrogram in $L_1$ form. $\mathcal{L}_{\mathrm{aux}}$ is calculated between ground truth $PPE$ and the output $\hat{PPE}$ of auxiliary feature adaptor in $L_1$ form. $\mathcal{L}_{\mathrm{adv}}$ is the adversarial loss in $L_2$ form.
+
+During the inference stage for voice conversion, the target reference speech is used to extract the mel-spectrogram containing speaker information, and source speech is used to obtain semantic tokens through the same pretrained HuBERT model as in the training process.
+
+The PPE is predicted based on the semantic information and reference speech together for the target speaker.
+
+\label{subsec:inference}
+\vspace{-0.3cm}
+
