--- a/Models/-VC/2023.12.14_SEF-VC.md
+++ b/Models/-VC/2023.12.14_SEF-VC.md
@@ -631,4 +631,30 @@ The PPE is predicted based on the semantic information and reference speech toge
 
 \label{sec:exp}
 
+### Data and Implementation Details
+
+\label{subsec:datasets}
+
+Our experiments were conducted on LibriTTS[^Zen2019LibriTTS], a multi-speaker English dataset with a total duration of 586 hours.
+
+We downsampled the utterances to 16kHz and excluded utterances that were too long or too short for training. 
+It contains a total of 2456 speakers, including 2311 in the training set, 73 in the validation set, and 72 in the test set. 
+To evaluate the model's performance in zero-shot voice conversion, we selected 20 speakers from LibriTTS's test-clean set.
+
+Among them, 10 speakers served as source speakers, and 2 utterances of each speaker were selected as the source speeches. 
+The remaining 10 served as target speakers and 1 utterance of each speaker with a length of about 3 seconds was selected as the reference speech.
+
+We extracted 1024-dimension semantic features from a pretrained HuBERT model\footnote{\url{https://github.com/facebookresearch/fairseq/blob/main/examples/hubert}} trained on 60k hours of LibriLight. 
+Then the semantic features were quantized by K-Means clustering with 2,000 centers offline.
+
+Both semantic encoders consisted of two Conformer blocks, in which multi-head attention layers for self-attention and cross-attention had 2 heads with an attention dimension of 184. 
+The mel-encoder contained 1 layer of convolution with kernel size 5 and an output dimension of 184. 
+Both generator and discriminator were optimized by Adam with an initial learning rate of 0.0002, and $\beta_1=0.5$, $\beta_2=0.9$, respectively.
+
+The learning rate decreased by 0.5 for every 200k steps.
+
+The coefficients of each loss were  $\lambda_{\mathrm{mel}} = 60, \lambda_{\mathrm{aux}} = 5, \lambda_{\mathrm{rec}} = 45, \lambda_{\mathrm{adv}} = 1, \lambda_{\mathrm{feat}} = 2$. 
+Besides, the frameshift of reference mel-spectrograms was 10ms to better capture acoustic details, especially speaker identity, while the frame shift of semantic tokens was 20ms.
+\vspace{-0.3cm}
+
 #
