--- a/Models/-VC/2023.12.14_SEF-VC.md
+++ b/Models/-VC/2023.12.14_SEF-VC.md
@@ -713,4 +713,25 @@ Higher SECS means higher speaker similarity while lower CER means more intelligi
 
 \vspace{-0.5cm}
 
+### Different Reference Lengths
+
+\label{subsub:abla pro}
+
+In this section, we inspect the impact of different lengths of prompts within SEF-VC and SSR-VC[^Polyak2021Speech], including 2s, 3s, 5s, and 10s.
+
+The results can be seen in Figure [fig:abal prompt](#fig:abal prompt).
+
+In SSR-VC[^Polyak2021Speech], the prompt serves to extract speaker embedding. 
+The results show that the performance of our model improves with the length of reference speech getting longer, which benefits from our proposed position-agnostic cross-attention mechanism. 
+Intuitively, a longer prompt makes it easier to model the speaker information, thus more helpful to convert the voice to target speakers. 
+Even in the case where the reference speech length is as short as 2s, the SECS of SEF-VC is still acceptable compared to SSR-VC[^Polyak2021Speech], which shows cross-attention mechanism is more robust than speaker embedding.
+
+Starting from a reference length of 3s, SEF-VC can already capture the target speaker's timbre to a great extent.
+
+![](abal2.png)
+
+<a id="fig:abal prompt">Experiment on the influence of references of different lengths on zero-shot VC.</a>
+
+\vspace{-0.4cm}
+
 #
