--- a/Models/-VC/2023.06.18_LM-VC.md
+++ b/Models/-VC/2023.06.18_LM-VC.md
@@ -35,3 +35,67 @@ Besides, to further alleviate the sampling error in the generation, an external 
 Finally, a prefix LM reconstructs fine acoustic tokens from the coarse and results in the converted speech.
 Experiments demonstrate that LM-VC outperforms competitive systems in speech naturalness and speaker similarity.
 
+## 1·Introduction
+
+\IEEEPARstart{V}{oice} conversion (VC) aims to convert speech from a source speaker to that of a target speaker without changing the linguistic content.
+
+VC's main rationale is to decompose source speech into separated components, including speaker timbre, linguistic content, and speaking style.
+
+Then the linguistic content and speaking style are combined with the target speaker's timbre to generate the converted speech.
+
+Training a typical VC system desires at least a sizable amount of the target speaker's speech.
+
+In contrast, *zero-shot*
+
+VC or *any-to-any*
+
+VC focuses on converting any source speech to that of any desired speaker with only one utterance available from the speaker, which is more practical for real-world applications.
+
+But since only one target speaker utterance is available, decoupling speech components and meanwhile maintaining target speaker timbre becomes more challenging.
+
+One intuitive approach is to leverage a speaker verification (SV) model to extract the speaker representation[^Qian2019AutoVC], [^Qian2020Unsupervised], [^Gu2021MediumVC], while automatic speech recognition (ASR)[^Sun2016Phonetic] or self-supervised learning (SSL) model[^Choi2021Neural], [^Lin2021FragmentVC], [^Yin2021Retriever], [^Maimon2022Speaking] are employed to extract the linguistic content.
+
+Some studies[^Qian2020Unsupervised], [^Choi2021Neural] also use signal perturbation techniques to alter speech utterances to make it speaker irrelevant before content extraction.
+
+Instead of attempting speech disentanglement prior to training the VC model, many studies rely on a specifically designed disentanglement approach to reduce the correlation among different speech components, including designs on complicated neural structures[^Chou2019One-Shot], [^Wang2023Multi-Level], loss functions[^Wang2021Vqmivc], [^Wang2021Adversarially], and training strategies[^Tang2022Avqvc], [^Ebbers2021Contrastive]. 
+
+However, the current zero-shot VC approaches still generalize poorly to unseen speakers with low speaker similarity, mainly due to the inevitable trade-off during the speech disentanglement process and the model's limited capacity on leveraging large-scale speech data.
+
+Recently, language models (LM)[^Borsos2022AudioLM], [^Agostinelli2023MusicLM], [^Wang2023Neural], [^Kharitonov2023Speak,] trained on large-scale datasets have achieved impressive performance in zero-shot audio generation.
+
+A popular paradigm is first to tokenize audio into *semantic* and *acoustic* tokens respectively by a self-supervised learning (SSL) model and a neural codec, where the SSL model extracts the linguistic content from audio while the audio codec reconstructs high-quality audio at very low bitrate, and then the discrete tokens enable the audio generation task to benefit from the powerful large language models.
+
+As a typical approach, AudioLM[^Borsos2022AudioLM] leverages 
+
+semantic and acoustic tokens as audio representations and introduces a three-stage language modeling process for audio generation.
+
+Specifically, using semantic tokens of a short utterance as a *prompt*, AudioLM generates the continuation of semantic tokens, which is then used as a conditioning signal for predicting coarse acoustic tokens and further restoring the fine acoustic details.
+
+Variants of AudioLM have also shown remarkable performance for zero-shot music generation and text-to-speech (TTS)[^Agostinelli2023MusicLM], [^Wang2023Neural], [^Kharitonov2023Speak,].
+
+In this letter, we explore the feasibility of language models in zero-shot VC. 
+An intuitive way is to follow AudioLM -- applying coarse and fine acoustic modeling to form a variant.
+
+However, such a straightforward LM approach encounters several issues in voice conversion:
+1) the linguistic content contained in semantic tokens may get dispersed as the network deepens during multi-layer language modeling while the lengthy speech input makes contextual learning even harder; 2) the semantic tokens extracted by HuBERT[^Hsu2021HuBERT] still contain speaker-related information, which may be propagated to the converted speech and lead to low speaker similarity; 3) the inherent generation diversity in the sampling of LM inevitably leads to unnatural pronunciation and even speech quality degradation.
+
+To address these issues, we propose a language model-based VC approach (LM-VC) -- a two-stage framework that first generates coarse acoustic tokens for recovering content and speaker timbre and then reconstructs the fine acoustic details as converted speech.
+
+Specifically, to maintain linguistic content and facilitate better speech disentanglement, we use a masked prefixed language model (MPLM) with a mask prediction strategy for coarse acoustic modeling.
+
+This model is encouraged to recover masked semantic tokens based on the context and predict target speech given the target speaker's utterance and the corrupted semantic tokens, thereby implicitly creating an information bottleneck on the source speech to reduce the source speaker information.
+
+To further alleviate the sampling error in the generation process, we integrate an external language model (ELM) that employs window attention[^Liu2021Swin] to better capture the local context among acoustic tokens.
+
+The ELM collaborates with the MPLM through *shallow fusion*[^Gulcehre2015On] to generate target speech.
+
+Finally, the fine acoustic tokens are reconstructed from the coarse ones in a non-autoregressive manner using a prefix LM[^Wang2023Neural].
+
+Experiments and ablations on large-scale speech data show that LM-VC is superior to YourTTS[^Casanova2022YourTTS] and an AudioLM[^Borsos2022AudioLM] baseline in both speaker similarity and speech naturalness.
+
+![](figure/framework_b.jpg)
+
+<a id="fig:lmvc">The architecture of LM-VC. (a) The LM-VC model. (b) The masked prefix language model. (c) The external language model.</a>
+
+\vspace{-10pt}
+
