--- a/Models/-VC/2023.06.18_LM-VC.md
+++ b/Models/-VC/2023.06.18_LM-VC.md
@@ -99,3 +99,8 @@ Experiments and ablations on large-scale speech data show that LM-VC is superior
 
 \vspace{-10pt}
 
+## 2·Proposed Approach
+
+\vspace{-3pt}
+
+#
