--- a/Models/-VC/2023.06.18_LM-VC.md
+++ b/Models/-VC/2023.06.18_LM-VC.md
@@ -103,4 +103,40 @@ Experiments and ablations on large-scale speech data show that LM-VC is superior
 
 \vspace{-3pt}
 
+### Overview
+
+\vspace{-5pt}
+
+As shown in Fig.~[fig:lmvc](#fig:lmvc)(a), LM-VC incorporates three LMs: an MPLM, an ELM, and a PLM. 
+
+Before language modeling, HuBERT[^Hsu2021HuBERT] and SoundStream[^Zeghidour2021SoundStream] are used to represent speech as semantic tokens $\mathbf{s} =\{s_1,s_2,...s_{T_s}\}$ and acoustic tokens $\mathbf{a} =\{a^1_1,a^2_1,...,a^L_1,a^1_2,...,a^L_{T_a}\}$, respectively.
+
+Here, $T_s$ and $T_a$ denote the sequence length, and $L$ represents the number of quantizers in SoundStream. 
+
+Similar to AudioLM[^Borsos2022AudioLM], LM-VC sequentially performs coarse and fine acoustic modeling. 
+
+*Coarse acoustic modeling*: The MPLM adopts the semantic tokens $\{\mathbf{s},\mathbf{\tilde{s}}\}$ from the source and target speaker speech, as well as the first-layer acoustic tokens $\tilde{\mathbf{a}}^1$ from target speaker speech.
+
+It autoregressively generates the acoustic tokens $\mathbf{a}^1$ of target speech, following the formulation $p(a^1_t|\tilde{\mathbf{s}},\mathbf{s},\tilde{\mathbf{a}}^1,\mathbf{a}^1_{1:t})$.
+
+In this process, the ELM performs $p(a^1_t|\mathbf{a}^1_{t-w:t})$ with window length $w$ and collaborates with the MPLM to generate speech. 
+
+*Fine acoustic modeling*: Taking the first-layer acoustic tokens as input, the PLM non-autoregressively generates fine acoustic tokens layer by layer.
+
+The semantic and acoustic tokens from the source speech and target speaker are also regarded as the prompt of the PLM.
+
+This process can be formulated as $p(\mathbf{a}^l|\tilde{\mathbf{s}},\mathbf{s},\tilde{\mathbf{a}},\mathbf{a}^{1:l-1},l)$ with $l \in [2, L]$.
+
+Following the NAR model in VALL-E[^Wang2023Neural], the PLM is achieved by a multi-layer Transformer[^Vaswani2017Attention] with bidirectional attention, leading to fast and high-quality speech reconstruction.
+
+Finally, SoundStream reconstructs waveform from the predicted acoustic tokens.
+
+In the two-stage modeling, coarse acoustic modeling plays a crucial role in recovering linguistic content and speaker timbre, while fine acoustic modeling contributes to the acoustic fine details.
+
+In LM-VC, we put more effort on coarse acoustic modeling as keeping the source content and the target speaker timbre is a challenging task in zero-shot VC.
+
+The MPLM and ELM, designed for coarse acoustic modeling, are introduced in the following sections. 
+
+\vspace{-13pt}
+
 #
